# sleepmate

./: .gitignore  Dockerfile  README.md  generate_requirements.sh  generate_whoop_client.sh  pyproject.toml  requirements.txt
corp/: agreement.md
discord/: bot.py  broker.py
discord_server/: bot.py  broker.py
discourse/: app.py
discourse_server/: app.py
nbs/: 001_wearables.ipynb  011_history.ipynb  011_intake.ipynb  0125_SLEEP-50.ipynb  012_WOOP.ipynb  012_bmi.ipynb  013_STOP-Bang.ipynb  014_nightmares.ipynb  01_sleep_diary.ipynb  02_knowledge.ipynb  03_ACT.ipynb  04_speak.ipynb  05_SEEDS.ipynb  05_goals.ipynb  06_mongodb.ipynb  07_stress_audit.ipynb  08_stimulus_control.ipynb  126_back_pain.ipynb  WHOOP.ipynb  chris_staging.ipynb  chroma.ipynb  discord.ipynb  discourse.ipynb  nudge.ipynb  pinecone.ipynb  scratch.ipynb  twilio.ipynb  wearables_pod.ipynb
nbs/.ipynb_checkpoints/: 011_history-checkpoint.ipynb  WHOOP-checkpoint.ipynb
sleepmate/: act.py  agent.py  audio.py  bmi.py  cache.py  config.py  db.py  diary.py  executor.py  goal.py  helpful_scripts.py  history.py  intake.py  isi.py  knowledge.py  meet.py  meta.py  mi.py  models.py  nightmare.py  nudge.py  null.py  pain.py  paradoxical.py  prompt.py  rails.py  seeds.py  sleep50.py  stimulus.py  stopbang.py  stress.py  structured.py  tools.py  user.py  wearable.py  whoop.py  woop.py
test/: conftest.py  helpful_scripts.py  test_act.py  test_bmi.py  test_daily_routine.py  test_diary.py  test_health_history.py  test_isi.py  test_llm_output.py  test_nightmares.py  test_pain.py  test_seeds.py  test_sleep50.py  test_stimulus_control.py  test_stop_bang.py  test_stress_audit.py  test_user.py  test_wearable.py
test/features/: connect.feature
test/step_defs/: test_connect.py
twilio/: app.py
twilio_server/: app.py
whoop/: app.py
whoop-client/: .gitlab-ci.yml  .travis.yml  README.md  setup.py  tox.ini
whoop-client/.openapi-generator/: FILES
whoop-client/docs/: CycleScore.md  PaginatedCycleResponse.md  RecoveryApi.md  RecoveryScore.md  UserApi.md  UserBodyMeasurement.md  Workout.md  WorkoutScore.md
whoop-client/test/: test_paginated_cycle_response.py  test_paginated_recovery_response.py  test_recovery_score.py  test_sleep_api.py  test_sleep_needed.py  test_sleep_score.py  test_user_api.py  test_user_basic_profile.py  test_user_body_measurement.py
whoop-client/whoop_client/: configuration.py  exceptions.py
whoop_client/: pyproject.toml
whoop_client/docs/: Cycle.md  CycleApi.md  PaginatedRecoveryResponse.md  PaginatedSleepResponse.md  PaginatedWorkoutResponse.md  Recovery.md  Sleep.md  SleepApi.md  SleepNeeded.md  SleepScore.md  SleepStageSummary.md  UserBasicProfile.md  WorkoutApi.md  ZoneDuration.md
whoop_client/test/: test_cycle.py  test_cycle_api.py  test_cycle_score.py  test_paginated_sleep_response.py  test_paginated_workout_response.py  test_recovery.py  test_recovery_api.py  test_sleep.py  test_workout.py  (+4 more)
whoop_server/: app.py
(+28 files in other folders)
