[tool.poetry]
name = "sleepmate"
version = "0.0.1"
description = "SleepMate"
authors = ["Christopher Kelly <chris@nourishbalancethrive.com>"]
readme = "README.md"
packages = [{include = "sleepmate"}]

[tool.poetry.dependencies]
python = "^3.11"
pytest-bdd = "^6.1.1"
openai = "^0.28.1"
langchain = "^0.0.314"
jupyterlab = "^4.0.7"
chromadb = "^0.4.13"
tiktoken = "^0.5.1"
pypdfium2 = "^4.20.0"
elevenlabs = "^0.2.26"
mongoengine = "^0.27.0"
python-dateutil = "^2.8.2"

[tool.poetry.group.dev.dependencies]
ipython = "^8.15.0"
google-api-python-client = "^2.102.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
