[tool.poetry]
name = "sleepmate"
version = "0.0.1"
description = "SleepMate"
authors = ["Christopher Kelly <chris@nourishbalancethrive.com>"]
readme = "README.md"
packages = [{include = "sleepmate"}]

[tool.poetry.dependencies]
python = "^3.11"
openai = "^0.28.1"
langchain = "^0.0.331"
tiktoken = "^0.5.1"
pypdfium2 = "^4.20.0"
elevenlabs = "^0.2.26"
mongoengine = "^0.27.0"
python-dateutil = "^2.8.2"
discord-py = "^2.3.2"
pinecone-client = "^2.2.4"
coloredlogs = "^15.0.1"
chromadb = "^0.4.15"
saq = {extras = ["web"], version = "^0.12.0"}
pydiscourse = "^1.6.1"
flask = "^3.0.0"

[tool.poetry.group.dev.dependencies]
ipython = "^8.15.0"
google-api-python-client = "^2.102.0"
ipywidgets = "^8.1.1"
jupyterlab = "^4.0.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
