[tool.poetry]
name = "sleepmate"
version = "0.0.1"
description = "SleepMate"
authors = ["Christopher Kelly <chris@nourishbalancethrive.com>"]
readme = "README.md"
packages = [{include = "sleepmate"}]

# poetry export -o requirements.txt --without local
[tool.poetry.group.local.dependencies]
whoop-client = { path = "./whoop_client" }

[tool.pytest.ini_options]
norecursedirs = ["whoop_client"]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s %(levelname)s %(name)s %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
filterwarnings = [
    "ignore::DeprecationWarning"
]

[tool.poetry.dependencies]
python = "^3.11"
openai = "^0.28.1"
langchain = "^0.0.346"
tiktoken = "^0.5.1"
pypdfium2 = "^4.20.0"
elevenlabs = "^0.2.26"
mongoengine = "^0.27.0"
python-dateutil = "^2.8.2"
discord-py = "^2.3.2"
pinecone-client = "^2.2.4"
coloredlogs = "^15.0.1"
chromadb = "^0.4.15"
saq = {extras = ["web"], version = "^0.12.0"}
pydiscourse = "^1.6.1"
flask = "^3.0.0"
gunicorn = "^21.2.0"
authlib = "^1.2.1"
twilio = "^8.10.1"
anthropic = "^0.7.7"
rich = "^13.7.0"

[tool.poetry.group.dev.dependencies]
ipython = "^8.15.0"
google-api-python-client = "^2.102.0"
ipywidgets = "^8.1.1"
jupyterlab = "^4.0.7"
pytest = "^7.4.3"
pytest-dependency = "^0.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
